-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: client-libs
-
b15
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245530 | 13.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b02 |
| JDK-8232671 | 11.0.6-oracle | Matthias Baesken | P4 | Resolved | Fixed | b02 |
| JDK-8231574 | 11.0.6 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
At some places in java.desktop native code (e.g. ShellFolder2.cpp and fontpath.c) we miss a couple of ReleaseStringUTFChars .
- backported by
-
JDK-8231574 missing ReleaseStringUTFChars in java.desktop native code
-
- Resolved
-
-
JDK-8232671 missing ReleaseStringUTFChars in java.desktop native code
-
- Resolved
-
-
JDK-8245530 missing ReleaseStringUTFChars in java.desktop native code
-
- Resolved
-