8230900: missing ReleaseStringUTFChars in java.desktop native code

Reviewed-by: clanger, prr